<resources>
        <string name="app_name">Login_Register</string>
        <string name="welcome">Welcome</string>
        <string name="back">Back</string>
        <string name="email">Email</string>
        <string name="password">Password</string>
        <string name="facebook">Facebook</string>
        <string name="google">Google</string>
        <string name="are_you_new_user_register">Are you new user? Register</string>
        <string name="create">Create</string>
        <string name="account">Account</string>
        <string name="name">Name</string>
        <string name="forget_password">Forget your password? Recovery it</string>
        <string name="background">background</string>
        <string name="button_1">button_one</string>
        <string name="button_2">button_two</string>
</resources>